Fix bug #18 vertically aligned icon menu. Update size icon

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -222,6 +222,13 @@
         justify-content: center;
         padding: 0 !important;
       }
+
+      .ant-pro-sider-logo{
+        img{
+          margin: auto;
+        }
+      }
+
       &:hover {
         z-index: 1000;
         width: 242px !important;
@@ -229,6 +236,14 @@
         max-width: 242px !important;
         box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.456);
         transition: min-width 0.3s, max-width 0.3s;
+
+        .ant-pro-sider-logo{
+          img{
+            margin: 0;
+            padding-left: 30.5px;
+          }
+        }
+
         .ant-menu-vertical .ant-menu-item,
         .ant-menu-vertical-left .ant-menu-item,
         .ant-menu-vertical-right .ant-menu-item,
